--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover ./node_modules/.bin/_mocha",
+    "test": "./node_modules/.bin/_mocha",
+    "coverage": "nyc npm run test",
     "eslint": "eslint ./lib --fix"
   },
   "keywords": [],
@@ -41,6 +42,7 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.6.0",
     "node-notifier": "^5.4.0",
+    "nyc": "^14.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
