--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "builder-webpack-test",
   "version": "1.2.0",
-  "description": "",
+  "description": "Builder Webpack Test",
   "main": "index.js",
   "scripts": {
     "test": "npx nyc@latest mocha",
