--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx nyc@latest mocha",
+    "commitmsg": "validate-commit-msg",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "eslint": "eslint ./lib --fix"
   },
   "keywords": [],
@@ -25,6 +27,7 @@
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.2",
+    "conventional-changelog-cli": "^2.0.23",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "eslint-loader": "^2.1.2",
@@ -37,6 +40,7 @@
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.4",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.6.0",
@@ -52,6 +56,7 @@
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
+    "validate-commit-msg": "^2.14.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-merge": "^4.2.1"
