--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
   "scripts": {
     "test": "npx nyc@latest mocha",
     "commitmsg": "validate-commit-msg",
+    "precommit": "webpack --config ./web/webpack.config.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "eslint": "eslint ./lib --fix"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
+  },  
   "keywords": [],
   "author": "",
   "license": "ISC",
