--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Builder Webpack Test",
   "main": "index.js",
   "scripts": {
-    "test": "npx nyc@latest mocha",
+    "test": "npx nyc mocha",
     "commitmsg": "validate-commit-msg",
     "precommit": "webpack --config ./web/webpack.config.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -12,8 +12,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm test"
+      "pre-commit": "npm run test",
+      "pre-push": "npm run test"
     }
   },  
   "keywords": [],
